porting pages into wordpress

--- a/wp-content/themes/apolda_kennels/style.css
+++ b/wp-content/themes/apolda_kennels/style.css
@@ -1,11 +1,10 @@
 /*
-	Theme Name: Ah Ha Foundation
-	Theme URI: http://ahhacreative.com
-	Description: HTML5 Blank WordPress Theme
+	Theme Name: Apolda Kennels
+	Theme URI: http://www.amywilson.net/amy_wilson_apoldakennels/
+	Description: Custom Theme for Apolda Kennels
 	Version: 1.0.0
-	Author: Amy Haywood Dutton (@ahaywood)
-	Author URI: http://ahhacreative.com
-
+	Author: Amy Wilson
+	Author URI:
 	License: MIT
 	License URI: http://opensource.org/licenses/mit-license.php
 */
