--- a/wp-content/themes/apolda_kennels/assets/src/scss/_7_pages/_blog.scss
+++ b/wp-content/themes/apolda_kennels/assets/src/scss/_7_pages/_blog.scss
@@ -86,6 +86,13 @@
     align-items: flex-end;
   }
 }
+ body.blog.logged-in{
+   border: none;
+ }
+
+ p.blog-content{
+   display: none;
+ }
 
 .blog {
   background: white;
@@ -212,7 +219,7 @@
 
       .latest-posts-section{
         margin-top: 4%;
-        width: 85%;
+        width: 100%;
       }
 }
 @include breakpoint(regular-screen){
