--- a/wp-content/themes/apolda_kennels/assets/src/scss/_5_layout/_layout.scss
+++ b/wp-content/themes/apolda_kennels/assets/src/scss/_5_layout/_layout.scss
@@ -26,3 +26,40 @@ form.search{
 
   }
 }
+
+
+// SIDEBAR
+
+div.sidebar-widget{
+  background-color: gray;
+  width: 30%;
+  height: 100px;
+  float: right;
+  clear: both;
+  position: relative;
+
+}
+
+
+// pagination
+
+.next_post{
+  font-family: $raleway;
+  color: $darkred;
+  width: 10%;
+  margin: auto;
+  font-size: em(14);
+  padding: 3px;
+  margin: 3px;
+  margin: auto;
+}
+
+.prev_post{
+  font-family: $raleway;
+  color: $darkred;
+  width: 10%;
+  font-size: em(14);
+  padding: 3px;
+  margin: 3px;
+  margin: auto;
+}
