--- a/wp-content/themes/apolda_kennels/assets/src/scss/_5_layout/_layout.scss
+++ b/wp-content/themes/apolda_kennels/assets/src/scss/_5_layout/_layout.scss
@@ -46,23 +46,117 @@ div.sidebar-widget{
 .next_post{
   font-family: $raleway;
   color: $darkred;
-  width: 20%;
+  width: 10%;
   margin: auto;
   font-size: em(14);
-  padding: 3px;
-  margin: 30px;
-  margin: auto;
+  padding: 10px;
+  margin-right: 34%;
   text-align: center;
   border: 1px $darkgray dashed;
+  float: right;
 }
 
 .prev_post{
   font-family: $raleway;
   color: $darkred;
-  width: 20%;
+  width: 10%;
   font-size: em(14);
-  padding: 3px;
-  margin: 30px;
+  padding: 10px;
+  margin-left: 34%;
+  text-align: center;
+  border: 1px $darkgray dashed;
+  float: left;
+}
+
+// comments
+
+.comments{
+  width: 80%;
+  margin: auto;
+  h2{
+    font-size: em(14);
+    color: $darkred;
+    font-family: $mont;
+    font-weight: bold;
+    text-align: center;
+  }
+  form p{
+    border-bottom: none;
+  }
+
+  p.logged-in-as{
+    border: none;
+  }
+
+  .form-submit{
+    border-bottom: none;
+  }
+  img{
+    width: 60px;
+    height: 60px;
+  }
+
+  p{
+    color: black;
+    font-family: $mont;
+    font-size: em(14);
+    text-align: left;
+  }
+
+  #submit{
+    width: 20%;
+    color: white;
+  }
+
+  div.comment-author.vcard{
+    color: $darkgray;
+    font-family: $mont;
+    font-size: em(12);
+  }
+
+  div.comment-meta.commentmetadata a{
+    color: $darkgray;
+    font-family: $mont;
+    font-size: em(12);
+  }
+}
+
+p.logged-in-as{
+  font-family: $raleway;
+  color: $darkred;
+  font-size: em(12);
+}
+
+textarea#comment{
+  width: 100%;
   margin: auto;
   text-align: center;
+
+}
+p.comment-form-comment{
+  text-align: center;
+}
+
+#commentform p label{
+display: none;
+}
+
+.form-submit input{
+  width: 20%;
+}
+
+a.comment-reply-link{
+    color: white;
+    border: 0.5px dashed #c41c30;
+    padding: 1%;
+    width: 40%;
+    font-family: $mont;
+    font-size: .75em;
+    background-color: $red;
+}
+
+.comment-body{
+  border: 1px black solid;
+  margin-bottom: 40px;
+  padding: 30px;
 }
